<resources>
    <string name="app_name">Test</string>
    <string name="title_user">Users</string>
    <string name="title_saved">Saved</string>
    <string name="change_photo">Change photo</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="number">Phone</string>
    <string name="title_edit">Edit user profile</string>
    <string name="save">Save</string>
    <string name="no_data">Put data on fields</string>
    <string name="delete">Do you want to delete this user?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>
